Use libnativewindow for Android builds
To avoid references to libEGL.so do not link with libandroid,
use libnativewindow instead. libnativewindow is available in
android-26 and newer.

Bug: angleproject:2418
Change-Id: I96509e5d645d132a34734558cd0566f1812b615b

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -519,10 +519,12 @@ static_library("libANGLE") {
       sources += rebase_path(gles_gypi.libangle_gl_egl_dl_sources, ".", "src")
       sources +=
           rebase_path(gles_gypi.libangle_gl_egl_android_sources, ".", "src")
-      libs += [
-        "android",
-        "log",
-      ]
+      if (android32_ndk_api_level >= 26 || android64_ndk_api_level >= 26) {
+        libs += [ "nativewindow" ]
+      } else {
+        libs += [ "android" ]
+      }
+      libs += [ "log" ]
     }
     if (ozone_platform_gbm) {
       configs += [ ":libdrm" ]
@@ -825,9 +827,10 @@ foreach(is_shared_library,
       sources += rebase_path(util_gypi.util_win32_sources, ".", "util")
     }
 
+    libs = []
     if (is_linux) {
       sources += rebase_path(util_gypi.util_linux_sources, ".", "util")
-      libs = [
+      libs += [
         "rt",
         "dl",
       ]
@@ -835,7 +838,7 @@ foreach(is_shared_library,
 
     if (is_mac) {
       sources += rebase_path(util_gypi.util_osx_sources, ".", "util")
-      libs = [
+      libs += [
         "AppKit.framework",
         "QuartzCore.framework",
       ]
@@ -854,10 +857,12 @@ foreach(is_shared_library,
       set_sources_assignment_filter([])
       sources += rebase_path(util_gypi.util_linux_sources, ".", "util")
       sources += rebase_path(util_gypi.util_android_sources, ".", "util")
-      libs = [
-        "android",
-        "log",
-      ]
+      if (android32_ndk_api_level >= 26 || android64_ndk_api_level >= 26) {
+        libs += [ "nativewindow" ]
+      } else {
+        libs += [ "android" ]
+      }
+      libs += [ "log" ]
     }
 
     if (use_ozone) {
