--- a/.gn
+++ b/.gn
@@ -7,7 +7,7 @@
 # As a result this file will only affect stand-alone ANGLE builds,
 # not chromium builds.
 
-import("//dotfile_settings.gni")
+import("//build/dotfile_settings.gni")
 
 # Location of the build configuration file.
 buildconfig = "//build/config/BUILDCONFIG.gn"
@@ -26,7 +26,7 @@ check_targets = []
 # These are the list of GN files that run exec_script. This whitelist exists
 # to force additional review for new uses of exec_script, which is strongly
 # discouraged except for gypi_to_gn calls.
-exec_script_whitelist = angle_dotfile_settings.exec_script_whitelist + [
+exec_script_whitelist = build_dotfile_settings.exec_script_whitelist + [
                           "//build/config/android/BUILD.gn",
                           "//build/config/android/config.gni",
                           "//build/config/android/internal_rules.gni",
