Migrating ANGLE to split LVL repos
Separated the Vulkan Validation Layers, Loader, and Tools into separate
dirs to map to the new separate repo structure.
Cloning Vulkan-Headers into each of these repos initially as
Vulkan-Headers is a submodule in each repo.

Bug: angleproject:2558
Change-Id: I422038f7dd7efe8c5b7a49dc5074de5caf40edfa

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -414,7 +414,10 @@ config("libANGLE_config") {
     }
   }
   if (angle_enable_vulkan) {
-    defines += [ "ANGLE_ENABLE_VULKAN" ]
+    defines += [
+      "ANGLE_ENABLE_VULKAN",
+      "API_NAME=\"Vulkan\"",
+    ]
   }
   if (angle_enable_null) {
     defines += [ "ANGLE_ENABLE_NULL" ]
@@ -441,12 +444,10 @@ if (angle_enable_vulkan) {
     ]
     data_deps = []
     if (!is_android) {
-      deps += [ "$angle_root/third_party/vulkan-validation-layers:libvulkan" ]
-      data_deps +=
-          [ "$angle_root/third_party/vulkan-validation-layers:VkICD_mock_icd" ]
-      public_configs += [
-        "$angle_root/third_party/vulkan-validation-layers:vulkan_loader_config",
-      ]
+      deps += [ "$angle_root/third_party/vulkan-loader:libvulkan" ]
+      data_deps += [ "$angle_root/third_party/vulkan-tools:VkICD_mock_icd" ]
+      public_configs +=
+          [ "$angle_root/third_party/vulkan-loader:vulkan_loader_config" ]
     }
 
     if (angle_enable_vulkan_validation_layers) {
