WIP:Migrating ANGLE to split LVL repos
Created new dirs for Vulkan-Loader and Vulkan-Tools where the Vulkan
loader and mock ICD are respectively built.

Not sure if this will work on all platforms yet but its building for me
locally so pushing for initial testing and feedback.

Bug: angleproject:2558
Change-Id: I422038f7dd7efe8c5b7a49dc5074de5caf40edfa

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -319,7 +319,10 @@ static_library("translator") {
     sources += rebase_path(compiler_gypi.angle_translator_lib_vulkan_sources,
                            ".",
                            "src")
-    defines += [ "ANGLE_ENABLE_VULKAN" ]
+    defines += [
+      "ANGLE_ENABLE_VULKAN",
+      "API_NAME=Vulkan",
+    ]
   }
 
   configs -= angle_undefine_configs
@@ -441,12 +444,10 @@ if (angle_enable_vulkan) {
     ]
     data_deps = []
     if (!is_android) {
-      deps += [ "$angle_root/third_party/vulkan-validation-layers:libvulkan" ]
-      data_deps +=
-          [ "$angle_root/third_party/vulkan-validation-layers:VkICD_mock_icd" ]
-      public_configs += [
-        "$angle_root/third_party/vulkan-validation-layers:vulkan_loader_config",
-      ]
+      deps += [ "$angle_root/third_party/vulkan-loader:libvulkan" ]
+      data_deps += [ "$angle_root/third_party/vulkan-tools:VkICD_mock_icd" ]
+      public_configs +=
+          [ "$angle_root/third_party/vulkan-loader:vulkan_loader_config" ]
     }
 
     if (angle_enable_vulkan_validation_layers) {
