--- a/.gn
+++ b/.gn
@@ -28,7 +28,8 @@ check_targets = []
 # to force additional review for new uses of exec_script, which is strongly
 # discouraged except for gypi_to_gn calls.
 exec_script_whitelist = angle_dotfile_settings.exec_script_whitelist +
-                        build_dotfile_settings.exec_script_whitelist + [
+                        build_dotfile_settings.exec_script_whitelist +
+                        [
                           "//build/config/sysroot.gni",
                           "//build/config/win/BUILD.gn",
                           "//build/config/win/visual_studio_version.gni",
