Metal: Implement fence sync
Bug: angleproject:2634
Change-Id: If1f7bb12c0e661c8e4b5677798a92440995819e4

--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -33,6 +33,8 @@ _metal_backend_sources = [
   "ShaderMtl.mm",
   "SurfaceMtl.h",
   "SurfaceMtl.mm",
+  "SyncMtl.h",
+  "SyncMtl.mm",
   "TextureMtl.h",
   "TextureMtl.mm",
   "TransformFeedbackMtl.h",
