Add a FrontendFeature to downscale backbuffer-sized textures.
Detect when a texture or renderbuffer being allocated is the same size
as the currently bound surface and adjust the allocation to be smaller.
This is a useful tool to determine if an application is fragment shader
or fill rate bound.

It would also be possible to lower the resolution of the backbuffer
itself but many applications query the surface size from other system
APIs which can cause rendering issues.

Bug: b/161716126
Change-Id: I324ef4ccecc99a1f3f6f1d565253cf284b02063a

--- a/src/libGLESv2.gni
+++ b/src/libGLESv2.gni
@@ -274,6 +274,8 @@ libangle_headers = [
   "src/libANGLE/entry_points_enum_autogen.h",
   "src/libANGLE/entry_points_utils.h",
   "src/libANGLE/features.h",
+  "src/libANGLE/feature_utils.cpp",
+  "src/libANGLE/feature_utils.h",
   "src/libANGLE/formatutils.h",
   "src/libANGLE/histogram_macros.h",
   "src/libANGLE/queryconversions.h",
