Metal: Implement Uniform buffers
Uniform buffer is implemented in two forms:
- If number of ubo used in shader program is low, each buffer will use
  one discrete Metal buffer slot.
- If number of ubo used is large, they will be embedded into one Metal
  argument buffer. Argument buffer is similar to Vulkan descriptor set.
  This is due to limit of number of Metal's discrete buffer slots which
  is only 31 and over half of them are already used by vertex
  attributes, default uniforms, driver uniforms, etc. The downside is
  that whenever a buffer binding is changed, the argument buffer must be
  updated also.

Added empty TransformFeedbackMtl implementation to enable ES3 context
creation on Metal.

Bug: angleproject:2634
Change-Id: I69325696fac735cb45ab88ab55468c0991abc317

--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -35,6 +35,8 @@ _metal_backend_sources = [
   "SurfaceMtl.mm",
   "TextureMtl.h",
   "TextureMtl.mm",
+  "TransformFeedbackMtl.h",
+  "TransformFeedbackMtl.mm",
   "VertexArrayMtl.h",
   "VertexArrayMtl.mm",
   "mtl_buffer_pool.h",
