Add Skia Gold integration to restricted trace tests.
Bug: angleproject:4090
Bug: b/168049670
Change-Id: I7a5d64fe35583ad7ea6360804a0f6b72cd9f6d8b

--- a/src/tests/restricted_traces/BUILD.gn
+++ b/src/tests/restricted_traces/BUILD.gn
@@ -66,10 +66,15 @@ angle_shared_library("angle_restricted_traces") {
 
 group("angle_restricted_trace_gold_tests") {
   testonly = true
-  data_deps = [ "$angle_root/src/tests:angle_perftests" ]
+  data_deps = [
+    "$angle_root/src/tests:angle_perftests",
+    "$angle_root/src/tests:angle_system_info_test",
+  ]
   data = [
     "restricted_trace_gold_tests.py",
     "restricted_traces.json",
+    "skia_gold/",
+    "//build/skia_gold_common/",
     "//testing/scripts/common.py",
     "//testing/xvfb.py",
   ]
