--- a/src/tests/restricted_traces/BUILD.gn
+++ b/src/tests/restricted_traces/BUILD.gn
@@ -66,11 +66,17 @@ angle_shared_library("angle_restricted_traces") {
 
 group("angle_restricted_trace_gold_tests") {
   testonly = true
-  data_deps = [ "$angle_root/src/tests:angle_perftests" ]
+  data_deps = [
+    "$angle_root/src/tests:angle_perftests",
+    "$angle_root/src/tests:angle_system_info_test",
+  ]
   data = [
     "restricted_trace_gold_tests.py",
     "restricted_traces.json",
     "//testing/scripts/common.py",
     "//testing/xvfb.py",
+    "skia_gold/__init.py__",
+    "skia_gold/angle_skia_gold_properties.py",
+    "skia_gold/angle_skia_gold_session_manager.py",
   ]
 }
