--- a/gni/angle.gni
+++ b/gni/angle.gni
@@ -128,6 +128,7 @@ declare_args() {
 
   angle_enable_hlsl = angle_enable_d3d9 || angle_enable_d3d11
   angle_enable_trace = false
+  angle_enable_ogl_vk_api_mapping = false
 
   # Disable the layers in ubsan builds because of really slow builds.
   # TODO(anglebug.com/4082) enable validation layers on mac for swiftshader
