Enable Vulkan SystemInfo on more platforms.
Can be used in the gold tests to produce device info.

Bug: angleproject:4090
Bug: b/168049670
Change-Id: I60d3ddc7d17cd00aa816dd266a54f6d6a62770d7

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -363,7 +363,7 @@ angle_static_library("angle_gpu_info_util") {
   libs = []
   defines = []
 
-  if (is_android || is_fuchsia) {
+  if (angle_enable_vulkan) {
     sources += libangle_gpu_info_util_vulkan_sources
     deps += [ "$angle_root/third_party/vulkan-headers/src:vulkan_headers" ]
   }
