--- a/gni/angle.gni
+++ b/gni/angle.gni
@@ -211,6 +211,7 @@ set_defaults("angle_test") {
   sources = []
   data = []
   defines = []
+  deps = []
   data_deps = []
   main = ""
   suppressed_configs = angle_remove_configs
