--- a/src/tests/BUILD.gn
+++ b/src/tests/BUILD.gn
@@ -110,6 +110,12 @@ angle_common_test_utils("angle_common_test_utils_static") {
   angle_util = "angle_util_static"
 }
 
+angle_test("angle_system_info_test") {
+  standalone_harness = true
+  main = "angle_system_info_tests_main"
+  deps = [ "$angle_root:angle_gpu_info_util" ]
+}
+
 angle_test("angle_unittests") {
   sources = angle_unittests_sources
   main = "angle_unittest_main"
