--- a/src/tests/BUILD.gn
+++ b/src/tests/BUILD.gn
@@ -286,6 +286,13 @@ if (is_win || is_linux || is_chromeos || is_android || is_mac) {
 }
 
 if (build_angle_perftests) {
+  # We use this in the restricted trace tests to load driver info.
+  angle_test("angle_system_info_test") {
+    standalone_harness = true
+    main = "angle_system_info_tests_main"
+    deps = [ "$angle_root:angle_gpu_info_util" ]
+  }
+
   import("angle_perftests.gni")
 
   angle_source_set("angle_trace_perftests") {
