--- a/src/libGLESv2.gni
+++ b/src/libGLESv2.gni
@@ -569,24 +569,33 @@ libglesv2_sources = [
   "src/libGLESv2/entry_points_gles_ext_autogen.h",
   "src/libGLESv2/global_state.cpp",
   "src/libGLESv2/global_state.h",
-  "src/libGLESv2/libGLESv2.rc",
   "src/libGLESv2/libGLESv2_autogen.cpp",
   "src/libGLESv2/proc_table_egl.h",
   "src/libGLESv2/proc_table_egl_autogen.cpp",
   "src/libGLESv2/resource.h",
 ]
 
+if (is_win) {
+  libglesv2_sources += [ "src/libGLESv2/libGLESv2.rc" ]
+}
+
 libglesv1_cm_sources = [
   "src/libGLESv1_CM/libGLESv1_CM.cpp",
-  "src/libGLESv1_CM/libGLESv1_CM.rc",
   "src/libGLESv1_CM/resource.h",
 ]
+
+if (is_win) {
+  libglesv1_cm_sources += [ "src/libGLESv1_CM/libGLESv1_CM.rc" ]
+}
 
 libegl_sources = [
   "src/libEGL/egl_loader_autogen.h",
   "src/libEGL/libEGL.cpp",
-  "src/libEGL/libEGL.rc",
   "src/libEGL/resource.h",
   "src/libGLESv2/entry_points_egl.h",
   "src/libGLESv2/entry_points_egl_ext.h",
 ]
+
+if (is_win) {
+  libegl_sources += [ "src/libEGL/libEGL.rc" ]
+}
