Fix SystemInfo not collecting info on Android.
Even without angle_enable_vulkan we need to complete info
collection. We don't rely on any loader linking in SystemInfo so
this should work on all platforms. The only additional dependency
we need is the Vulkan headers.

Bug: angleproject:5109
Bug: chromium:1133459
Change-Id: I3cf417be0b76d745e7beb9d3cac9734688dfd0b7

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -358,15 +358,11 @@ angle_static_library("angle_gpu_info_util") {
     ":angle_backend_config",
   ]
   public_deps = [ ":angle_common" ]
-  sources = libangle_gpu_info_util_sources
-  deps = []
+  sources =
+      libangle_gpu_info_util_sources + libangle_gpu_info_util_vulkan_sources
+  deps = [ "$angle_root/third_party/vulkan-headers/src:vulkan_headers" ]
   libs = []
   defines = []
-
-  if (angle_enable_vulkan) {
-    sources += libangle_gpu_info_util_vulkan_sources
-    deps += [ "$angle_root/third_party/vulkan-headers/src:vulkan_headers" ]
-  }
 
   if (is_android) {
     sources += libangle_gpu_info_util_android_sources
