--- a/gni/angle.gni
+++ b/gni/angle.gni
@@ -40,7 +40,7 @@ if (angle_has_build) {
 }
 
 if (build_with_chromium) {
-  import("//ui/ozone/ozone.gni")
+  import("//build/config/ozone.gni")
 } else {
   declare_args() {
     ozone_platform_gbm = false
