Tests: Add Asphalt 8 trace
Test: angle_perftest --gtest_filter="*asphalt*"
Bug: b/150484427
Change-Id: I698ef91ee4fffa5f28b1f1076712470400ac6c6d

--- a/src/tests/restricted_traces/.gitignore
+++ b/src/tests/restricted_traces/.gitignore
@@ -1,5 +1,7 @@
 angry_birds_2_1500.tar.gz
 angry_birds_2_1500/
+asphalt_8.tar.gz
+asphalt_8/
 candy_crush_500.tar.gz
 candy_crush_500/
 cod_mobile.tar.gz
